fix box spacing

--- a/styles/pages/branch.module.scss
+++ b/styles/pages/branch.module.scss
@@ -171,7 +171,7 @@ $dropdownText: 17px;
             .lead {
                 display: flex;
                 justify-self: center;
-                width: 100%;
+                width: 250px;
                 padding: 10px;
                 background: #fff;
                 align-items: center;
